Agregando header - twitter 90%

--- a/index.html
+++ b/index.html
@@ -6,6 +6,31 @@
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
+    <header>
+      <nav>
+        <ul class="nav-left">
+          <span class="icon-home icon"></span>
+          <li>Inicio</li>
+          <span class="icon-notification icon"></span>
+          <li>Notificaciones</li>
+          <span class="icon-letter icon"></span>
+          <li>Mensajes</li>
+        </ul>
+        <a href="#" class="icon-twitter icon"></a>
+        <ul class="nav-right">
+          <li>
+            <input type="text" name="" class="input-search" placeholder="Buscar en Twitter">
+            <button type="button" class="icon-search icon"></button>
+          </li>
+          <li>
+            <img src="assets/images/perfil.jpg" alt="" class="avatar-circle">
+          </li>
+          <li>
+            <button type="button"class="icon-pluma icon"><span>Twittear</span></button>
+          </li>
+        </ul>
+      </nav>
+    </header>
     <script type="text/javascript" src="assets/js/app.js"></script>
   </body>
 </html>
