Agregando seccion izquierda

--- a/index.html
+++ b/index.html
@@ -31,6 +31,59 @@
         </ul>
       </nav>
     </header>
+    <section>
+      <article id="left">
+        <div class="info">
+          <img src="assets/images/fondo.jpg" alt="" class="fondo">
+          <div class="name">
+            <h2>Ashley</h2><span class="icon-protected icon"></span>
+            <p class="gray">@AshleyLes</p>
+          </div>
+          <div class="tweets">
+            <div>
+              <p class="up-case gray">Tweets</p>
+              <span>1.093</span>
+            </div>
+            <div>
+              <p class="up-case gray">Siguiendo</p>
+              <span>1.630</span>
+            </div>
+            <div>
+              <p class="up-case gray">Seguidores</p>
+              <span>610</span>
+            </div>
+          </div>
+          <img src="assets/images/perfil.jpg" alt="" class="avatar">
+        </div>
+        <div class="trends">
+          <div>
+            <h3 class="gray">Tendencias: Lima</h3>
+            <span>.</span>
+            <a href="#" class="change color">Cambiar</a>
+          </div>
+          <div>
+            <div class="item">
+              <a href="#" class="color">#DemiLovato</a>
+              <p class="gray">1.59 M Tweets</p>
+            </div>
+            <div class="item">
+              <a href="#" class="color">#Laboratoria</a>
+              <p class="gray">77.4 K Tweets</p>
+            </div>
+            <div class="item">
+              <a href="#" class="color">#90Central</a>
+            </div>
+            <div class="item">
+              <a href="#" class="color">#MTVAwards</a>
+              <p class="gray">MTV Movie and TV Awards: All Access</p>
+            </div>
+            <div class="item">
+              <a href="#" class="color">#Francia</a>
+            </div>
+          </div>
+        </div>
+      </article>
+    </section>
     <script type="text/javascript" src="assets/js/app.js"></script>
   </body>
 </html>
