Agregando la seccion del medio

--- a/index.html
+++ b/index.html
@@ -83,6 +83,82 @@
           </div>
         </div>
       </article>
+      <article id="center">
+        <div class="status">
+          <div class="text-status">
+            <input type="text" placeholder="¿Qué está pasando?">
+            <button type="button" class="icon-camera icon"></button>
+          </div>
+          <img src="assets/images/perfil.jpg" alt="">
+        </div>
+        <div class="content-tweet">
+          <div class="tweet">
+            <img src="assets/images/e.jpeg" alt="">
+            <div class="text-tweet">
+              <a href="#">E! Latin America</a>
+              <span class="gray">@EonlineLatino . 5min</span><br>
+              <p>Madonna se preparó para una gran batalla </p><span class="hashtag">#AlfombraRojaE! #METgala instagram.com/p/BTkraPNjP5V/</span><br><br>
+            </div>
+            <div class="enlace">
+              <button type="button" class="icon-flecha icon"></button>
+              <button type="button" class="icon-re icon"></button>
+              <button type="button" class="icon-love icon"></button>
+            </div>
+          </div>
+          <div class="tweet">
+            <img src="assets/images/stalker.jpg" alt="">
+            <div class="text-tweet">
+              <a href="#">Stalker</a>
+              <span class="gray">@SoyStalkeador . 27 jun. 2016</span><br>
+              <p>Situación sentimental: Con hambre.</p>
+            </div>
+            <div class="enlace">
+              <button type="button" class="icon-flecha icon"></button>
+              <button type="button" class="icon-re icon"></button>
+              <button type="button" class="icon-love icon"></button>
+            </div>
+          </div>
+          <div class="tweet">
+            <img src="assets/images/frases-de-canciones.jpeg" alt="">
+            <div class="text-tweet">
+              <a href="#">Frases de Canciones</a>
+              <span class="gray">@PhrasesMusicES . 8 min</span><br>
+              <p>Serás feliz me dijo la vida, pero primero te enseñaré a ser fuerte.</p>
+            </div>
+            <div class="enlace">
+              <button type="button" class="icon-flecha icon"></button>
+              <button type="button" class="icon-re icon"></button>
+              <button type="button" class="icon-love icon"></button>
+            </div>
+          </div>
+          <div class="tweet">
+            <img src="assets/images/poemas-escritos.jpg" alt="">
+            <div class="text-tweet">
+              <a href="#">Poemas Escritos.</a>
+              <span class="gray">@PoemasEscrito . 26 abr.</span><br>
+              <p>Usted es el único...</p>
+            </div>
+            <div class="enlace">
+              <button type="button" class="icon-flecha icon"></button>
+              <button type="button" class="icon-re icon"></button>
+              <button type="button" class="icon-love icon"></button>
+            </div>
+          </div>
+          <div class="tweet">
+            <img src="assets/images/frases-de-canciones.jpeg" alt="">
+            <div class="text-tweet">
+              <a href="#">Frases de Canciones</a>
+              <span class="gray">@PhrasesMusicES . 8 min</span><br>
+              <p>"No dejes para hoy, lo que puedes hacer mañana"- El Vago.</p>
+            </div>
+            <div class="enlace">
+              <button type="button" class="icon-flecha icon"></button>
+              <button type="button" class="icon-re icon"></button>
+              <button type="button" class="icon-love icon"></button>
+            </div>
+          </div>
+        </div>
+      </article>
     </section>
     <script type="text/javascript" src="assets/js/app.js"></script>
   </body>
