Agregando seccion derecha

--- a/index.html
+++ b/index.html
@@ -159,6 +159,56 @@
           </div>
         </div>
       </article>
+      <article id="rigth">
+        <div class="follow">
+          <h3>A quién seguir</h3>
+          <a href="#" class="color">. Actualizar . </a>
+          <a href="#" class="color"> Ver todos</a>
+          <div class="follower">
+            <img src="assets/images/igp.jpg" alt="">
+            <div class="info-follower">
+              <a href="#">IGP</a>
+              <span class="gray">@igp_peru</span>
+              <span class="icon-close icon"></span>
+              <button type="button" name="button">
+                <span class="icon-add icon"></span>
+                <span>Seguir</span>
+              </button>
+            </div>
+          </div>
+          <div class="follower">
+            <img src="assets/images/ericasadun.png" alt="">
+            <div class="info-follower">
+              <a href="#">ericasadun</a>
+              <span class="gray">@ericasadun</span>
+              <span class="icon-close icon"></span>
+              <button type="button" name="button">
+                <span class="icon-add icon"></span>
+                <span>Seguir</span>
+              </button>
+            </div>
+          </div>
+          <div class="follower">
+            <img src="assets/images/udemy.jpg" alt="">
+            <div class="info-follower">
+              <a href="#">Udemy</a>
+              <span class="gray">@udemy</span>
+              <span class="icon-close icon"></span>
+              <button type="button" name="button">
+                <span class="icon-add icon"></span>
+                <span>Seguir</span>
+              </button>
+            </div>
+            <p><a href="#" class="color">Encontrar amigos</a></p>
+          </div>
+        </div>
+        <div class="derechos">
+          <p class="gray">&copy; 2017 Twitter Sobre nosotros Centro de Ayuda Codiciones Política de privacidad Cookies Información sobre anuncios Marca Blog Estado  Aplicaciones  Empleos  Empresas  Desarrolladores</p>
+        </div>
+        <div class="publicidad">
+          <a href="#" class="color">Publicitar en Twitter</a>
+        </div>
+      </article>
     </section>
     <script type="text/javascript" src="assets/js/app.js"></script>
   </body>
