--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Twitter</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" href="https://twitter.com/favicons/favicon.ico">
   </head>
   <body>
     <header>
