Agregando hover en enlaces

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <img src="assets/images/perfil.jpg" alt="" class="avatar-circle">
           </li>
           <li>
-            <button type="button"class="icon-pluma icon"><span>Twittear</span></button>
+            <button type="button"class="icon-pluma icon btn-twittear"><span>Twittear</span></button>
           </li>
         </ul>
       </nav>
@@ -64,22 +64,22 @@
           </div>
           <div>
             <div class="item">
-              <a href="#" class="color">#DemiLovato</a>
+              <a href="#" class="color hashtag">#DemiLovato</a>
               <p class="gray">1.59 M Tweets</p>
             </div>
             <div class="item">
-              <a href="#" class="color">#Laboratoria</a>
+              <a href="#" class="color hashtag">#Laboratoria</a>
               <p class="gray">77.4 K Tweets</p>
             </div>
             <div class="item">
-              <a href="#" class="color">#90Central</a>
+              <a href="#" class="color hashtag">#90Central</a>
             </div>
             <div class="item">
-              <a href="#" class="color">#MTVAwards</a>
+              <a href="#" class="color hashtag">#MTVAwards</a>
               <p class="gray">MTV Movie and TV Awards: All Access</p>
             </div>
             <div class="item">
-              <a href="#" class="color">#Francia</a>
+              <a href="#" class="color hashtag">#Francia</a>
             </div>
           </div>
         </div>
